@@ -1,5 +1,11 @@
 2014-05-07  Corinna Vinschen  <corinna@vinschen.de>
 
+	* passwd.cc (pwdgrp::parse_passwd): Fix an off by one computing the
+	buffer len.  Add comment.
+	* uinfo.cc (internal_getlogin): Fix typo in comment.
+
+2014-05-07  Corinna Vinschen  <corinna@vinschen.de>
+
 	* uinfo.cc (pwdgrp::fetch_account_from_windows): Tweak SID<->uid
 	conversion to cover S-1-5-113, S-1-5-114, and S-1-5-1000 groups.
 
